<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:orientation="vertical">
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/navigation_top_bar_background" >

        <ImageView
            android:id="@+id/win_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/close"
            android:paddingRight="6dp"
            android:paddingLeft="6dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/win_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
			android:layout_weight="1.05"
            android:gravity="center"
            android:text="@string/configSetting"
            android:textColor="#ffffff"
            android:textSize="20sp" />
        <Button
            android:id="@+id/btnSaveConfig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/default_button"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/saveConfig"
            android:contentDescription="@null"/>
    </LinearLayout>

        <LinearLayout
            android:id="@+id/llsetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/url"/>
            <EditText android:id="@+id/eturl"
                android:layout_width="match_parent"
                android:gravity="left|top"
                android:layout_height="90dp"
                android:layout_marginLeft="60dp"
                 android:layout_marginRight="40dp"
                 android:singleLine="false"
                android:inputType="textMultiLine"/>

        </LinearLayout>

</LinearLayout>